create main category page banner carousel

--- a/public/index.html
+++ b/public/index.html
@@ -28,12 +28,12 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <link rel="stylesheet" href="./fonts/WebFonts/css/fontiran.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/fonts/WebFonts/css/fontiran.css">
     <title>React App</title>
   </head>
   <body  dir="rtl">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root" class="font-yekan"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
