--- a/front/public/index.html
+++ b/front/public/index.html
@@ -29,7 +29,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <link rel="stylesheet" href="%PUBLIC_URL%/fonts/WebFonts/css/fontiran.css">
-    <title>React App</title>
+    <title>فروشگاه اینترنتی لباس دیجی ممد</title>
   </head>
   <body  dir="rtl">
     <noscript>You need to enable JavaScript to run this app.</noscript>
